--- a/04-Working-with-Unix.Rmd
+++ b/04-Working-with-Unix.Rmd
@@ -91,7 +91,7 @@ pwd
 ```
 
 ```
-/Users/sean
+## /Users/sean
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -99,12 +99,12 @@ ls
 ```
 
 ```
-Code
-Documents
-Photos
-Desktop
-Music
-todo-2017-01-24.txt
+## Code
+## Documents
+## Photos
+## Desktop
+## Music
+## todo-2017-01-24.txt
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -113,15 +113,15 @@ ls
 ```
 
 ```
-2016-06-20-datasci01.png
-2016-06-20-datasci02.png
-2016-06-20-datasci03.png
-2016-06-21-lab01.jpg
-2016-06-21-lab02.jpg
-2017-01-02-hiking01.jpg
-2017-01-02-hiking02.jpg
-2017-02-10-hiking01.jpg
-2017-02-10-hiking02.jpg
+## 2016-06-20-datasci01.png
+## 2016-06-20-datasci02.png
+## 2016-06-20-datasci03.png
+## 2016-06-21-lab01.jpg
+## 2016-06-21-lab02.jpg
+## 2017-01-02-hiking01.jpg
+## 2017-01-02-hiking02.jpg
+## 2017-02-10-hiking01.jpg
+## 2017-02-10-hiking02.jpg
 ```
 
 I've just been dumping pictures and figures into this folder without organizing
@@ -143,10 +143,10 @@ ls 2017*
 ```
 
 ```
-2017-01-02-hiking01.jpg
-2017-01-02-hiking02.jpg
-2017-02-10-hiking01.jpg
-2017-02-10-hiking02.jpg
+## 2017-01-02-hiking01.jpg
+## 2017-01-02-hiking02.jpg
+## 2017-02-10-hiking01.jpg
+## 2017-02-10-hiking02.jpg
 ```
 
 Only the files starting with "2017" are listed! The command `ls 2017*` literally
@@ -162,11 +162,11 @@ ls 2016*
 ```
 
 ```
-2016-06-20-datasci01.png
-2016-06-20-datasci02.png
-2016-06-20-datasci03.png
-2016-06-21-lab01.jpg
-2016-06-21-lab02.jpg
+## 2016-06-20-datasci01.png
+## 2016-06-20-datasci02.png
+## 2016-06-20-datasci03.png
+## 2016-06-21-lab01.jpg
+## 2016-06-21-lab02.jpg
 ```
 
 We could list only the files with names ending in `.jpg`:
@@ -176,12 +176,12 @@ ls *.jpg
 ```
 
 ```
-2016-06-21-lab01.jpg
-2016-06-21-lab02.jpg
-2017-01-02-hiking01.jpg
-2017-01-02-hiking02.jpg
-2017-02-10-hiking01.jpg
-2017-02-10-hiking02.jpg
+## 2016-06-21-lab01.jpg
+## 2016-06-21-lab02.jpg
+## 2017-01-02-hiking01.jpg
+## 2017-01-02-hiking02.jpg
+## 2017-02-10-hiking01.jpg
+## 2017-02-10-hiking02.jpg
 ```
 
 In the case above the file name can start with a sequence of zero or more of 
@@ -193,10 +193,10 @@ ls *01.*
 ```
 
 ```
-2016-06-20-datasci01.png
-2016-06-21-lab01.jpg
-2017-01-02-hiking01.jpg
-2017-02-10-hiking01.jpg
+## 2016-06-20-datasci01.png
+## 2016-06-21-lab01.jpg
+## 2017-01-02-hiking01.jpg
+## 2017-02-10-hiking01.jpg
 ```
 
 All of the files above have names that are composed of a sequence of characters,
@@ -222,13 +222,13 @@ ls
 ```
 
 ```
-2016
-2016-06-20-datasci01.png
-2016-06-20-datasci02.png
-2016-06-20-datasci03.png
-2016-06-21-lab01.jpg
-2016-06-21-lab02.jpg
-2017
+## 2016
+## 2016-06-20-datasci01.png
+## 2016-06-20-datasci02.png
+## 2016-06-20-datasci03.png
+## 2016-06-21-lab01.jpg
+## 2016-06-21-lab02.jpg
+## 2017
 ```
 
 Notice that I've moved all files that start with "2017-" into the 2017 folder!
@@ -240,8 +240,8 @@ ls
 ```
 
 ```
-2016
-2017
+## 2016
+## 2017
 ```
 
 Finally my photos are somewhat organized! Let's list the file in each directory
@@ -252,11 +252,11 @@ ls 2016/
 ```
 
 ```
-2016-06-20-datasci01.png
-2016-06-20-datasci02.png
-2016-06-20-datasci03.png
-2016-06-21-lab01.jpg
-2016-06-21-lab02.jpg
+## 2016-06-20-datasci01.png
+## 2016-06-20-datasci02.png
+## 2016-06-20-datasci03.png
+## 2016-06-21-lab01.jpg
+## 2016-06-21-lab02.jpg
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -264,10 +264,10 @@ ls 2017/
 ```
 
 ```
-2017-01-02-hiking01.jpg
-2017-01-02-hiking02.jpg
-2017-02-10-hiking01.jpg
-2017-02-10-hiking02.jpg
+## 2017-01-02-hiking01.jpg
+## 2017-01-02-hiking02.jpg
+## 2017-02-10-hiking01.jpg
+## 2017-02-10-hiking02.jpg
 ```
 
 Looks good! There are a few more wildcards beyond the star wildcard which we'll
@@ -305,8 +305,8 @@ ls
 ```
 
 ```
-canada.txt
-states.txt
+## canada.txt
+## states.txt
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -314,7 +314,7 @@ wc states.txt
 ```
 
 ```
-50      60     472 states.txt
+## 50      60     472 states.txt
 ```
 
 It makes sense that there are 50 lines, but it's interesting that there are 60
@@ -325,16 +325,16 @@ head states.txt
 ```
 
 ```
-Alabama
-Alaska
-Arizona
-Arkansas
-California
-Colorado
-Connecticut
-Delaware
-Florida
-Georgia
+## Alabama
+## Alaska
+## Arizona
+## Arkansas
+## California
+## Colorado
+## Connecticut
+## Delaware
+## Florida
+## Georgia
 ```
 
 This file looks basically how you would expect it to look! You may recall from
@@ -358,8 +358,8 @@ grep "x" states.txt
 ```
 
 ```
-New Mexico
-Texas
+## New Mexico
+## Texas
 ```
 
 In the command above, the first argument to `grep` is the regular expression
@@ -383,10 +383,10 @@ grep "New" states.txt
 ```
 
 ```
-New Hampshire
-New Jersey
-New Mexico
-New York
+## New Hampshire
+## New Jersey
+## New Mexico
+## New York
 ```
 
 In the previous case the regular expression we used was simply `"New"`, which
@@ -400,10 +400,10 @@ grep "nia" states.txt
 ```
 
 ```
-California
-Pennsylvania
-Virginia
-West Virginia
+## California
+## Pennsylvania
+## Virginia
+## West Virginia
 ```
 
 All of the state names above happen to end with the string "nia".
@@ -425,10 +425,10 @@ egrep "i.g" states.txt
 ```
 
 ```
-Virginia
-Washington
-West Virginia
-Wyoming
+## Virginia
+## Washington
+## West Virginia
+## Wyoming
 ```
 
 The regular expression "i.g" matches the sub-string "irg" in V*irg*inia, and
@@ -452,8 +452,8 @@ egrep "s+as" states.txt
 ```
 
 ```
-Arkansas
-Kansas
+## Arkansas
+## Kansas
 ```
 
 Both Arkan*sas* and Kan*sas* match the regular expression `"s+as"`. Besides the
@@ -466,13 +466,13 @@ egrep "s*as" states.txt
 ```
 
 ```
-Alaska
-Arkansas
-Kansas
-Massachusetts
-Nebraska
-Texas
-Washington
+## Alaska
+## Arkansas
+## Kansas
+## Massachusetts
+## Nebraska
+## Texas
+## Washington
 ```
 
 As you can see the star metacharacter is much more liberal with respect to
@@ -488,10 +488,10 @@ egrep "s{2}" states.txt
 ```
 
 ```
-Massachusetts
-Mississippi
-Missouri
-Tennessee
+## Massachusetts
+## Mississippi
+## Missouri
+## Tennessee
 ```
 
 Take note that the regular expression `"s{2}"` is equivalent to the regular
@@ -504,10 +504,10 @@ egrep "s{2,3}" states.txt
 ```
 
 ```
-Massachusetts
-Mississippi
-Missouri
-Tennessee
+## Massachusetts
+## Mississippi
+## Missouri
+## Tennessee
 ```
 
 Of course the results are the same because there aren't any states that have "s"
@@ -524,7 +524,7 @@ egrep "(iss){2}" states.txt
 ```
 
 ```
-Mississippi
+## Mississippi
 ```
 
 We could combine more quantifiers and capturing groups to dream up even more
@@ -536,7 +536,7 @@ egrep "(i.{2}){3}" states.txt
 ```
 
 ```
-Mississippi
+## Mississippi
 ```
 
 The complex regular expression above still only matches "Mississippi".
@@ -571,15 +571,15 @@ egrep "\w" small.txt
 ```
 
 ```
-abcdefghijklmnopqrstuvwxyz
-ABCDEFGHIJKLMNOPQRSTUVWXYZ
-0123456789
-aa bb cc
-rhythms
-xyz
-abc
-tragedy + time = humor
-http://www.jhsph.edu/
+## abcdefghijklmnopqrstuvwxyz
+## ABCDEFGHIJKLMNOPQRSTUVWXYZ
+## 0123456789
+## aa bb cc
+## rhythms
+## xyz
+## abc
+## tragedy + time = humor
+## http://www.jhsph.edu/
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -587,7 +587,7 @@ egrep "\d" small.txt
 ```
 
 ```
-0123456789
+## 0123456789
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -595,8 +595,8 @@ egrep "\s" small.txt
 ```
 
 ```
-aa bb cc
-tragedy + time = humor
+## aa bb cc
+## tragedy + time = humor
 ```
 
 As you can see in the example above, the `\w` metacharacter matches all letters,
@@ -608,7 +608,7 @@ egrep -v "\w" small.txt
 ```
 
 ```
-#%&-=***=-&%#
+## #%&-=***=-&%#
 ```
 
 The `-v` flag (which stands for in**v**ert match) makes `grep` return all of the
@@ -621,10 +621,10 @@ egrep "\W" small.txt
 ```
 
 ```
-aa bb cc
-tragedy + time = humor
-http://www.jhsph.edu/
-#%&-=***=-&%#
+## aa bb cc
+## tragedy + time = humor
+## http://www.jhsph.edu/
+## #%&-=***=-&%#
 ```
 
 The returned strings all contain non-word characters. Note the difference between
@@ -644,11 +644,11 @@ egrep "[aeiou]" small.txt
 ```
 
 ```
-abcdefghijklmnopqrstuvwxyz
-aa bb cc
-abc
-tragedy + time = humor
-http://www.jhsph.edu/
+## abcdefghijklmnopqrstuvwxyz
+## aa bb cc
+## abc
+## tragedy + time = humor
+## http://www.jhsph.edu/
 ```
 
 Notice that the word "rythms" does not appear in the result (it's the longest
@@ -659,16 +659,16 @@ egrep "[^aeiou]" small.txt
 ```
 
 ```
-abcdefghijklmnopqrstuvwxyz
-ABCDEFGHIJKLMNOPQRSTUVWXYZ
-0123456789
-aa bb cc
-rhythms
-xyz
-abc
-tragedy + time = humor
-http://www.jhsph.edu/
-#%&-=***=-&%#
+## abcdefghijklmnopqrstuvwxyz
+## ABCDEFGHIJKLMNOPQRSTUVWXYZ
+## 0123456789
+## aa bb cc
+## rhythms
+## xyz
+## abc
+## tragedy + time = humor
+## http://www.jhsph.edu/
+## #%&-=***=-&%#
 ```
 
 Every line in the file is printed, because every line contains at least one
@@ -688,10 +688,10 @@ egrep "[e-q]" small.txt
 ```
 
 ```
-abcdefghijklmnopqrstuvwxyz
-rhythms
-tragedy + time = humor
-http://www.jhsph.edu/
+## abcdefghijklmnopqrstuvwxyz
+## rhythms
+## tragedy + time = humor
+## http://www.jhsph.edu/
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -699,7 +699,7 @@ egrep "[E-Q]" small.txt
 ```
 
 ```
-ABCDEFGHIJKLMNOPQRSTUVWXYZ
+## ABCDEFGHIJKLMNOPQRSTUVWXYZ
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -707,11 +707,11 @@ egrep "[e-qE-Q]" small.txt
 ```
 
 ```
-abcdefghijklmnopqrstuvwxyz
-ABCDEFGHIJKLMNOPQRSTUVWXYZ
-rhythms
-tragedy + time = humor
-http://www.jhsph.edu/
+## abcdefghijklmnopqrstuvwxyz
+## ABCDEFGHIJKLMNOPQRSTUVWXYZ
+## rhythms
+## tragedy + time = humor
+## http://www.jhsph.edu/
 ```
 
 ### Escaping, Anchors, Odds, and Ends
@@ -729,7 +729,7 @@ egrep "\+" small.txt
 ```
 
 ```
-tragedy + time = humor
+## tragedy + time = humor
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -737,7 +737,7 @@ egrep "\." small.txt
 ```
 
 ```
-http://www.jhsph.edu/
+## http://www.jhsph.edu/
 ```
 
 There are three more metacharacters that we should discuss, and two of them come
@@ -752,14 +752,14 @@ egrep "^M" states.txt
 ```
 
 ```
-Maine
-Maryland
-Massachusetts
-Michigan
-Minnesota
-Mississippi
-Missouri
-Montana
+## Maine
+## Maryland
+## Massachusetts
+## Michigan
+## Minnesota
+## Mississippi
+## Missouri
+## Montana
 ```
 
 Or we could search for all of the states that end in "s":
@@ -769,11 +769,11 @@ egrep "s$" states.txt
 ```
 
 ```
-Arkansas
-Illinois
-Kansas
-Massachusetts
-Texas
+## Arkansas
+## Illinois
+## Kansas
+## Massachusetts
+## Texas
 ```
 
 There's a mnemonic that I love for remembering which metacharacter to use for
@@ -791,10 +791,10 @@ egrep "North|South" states.txt
 ```
 
 ```
-North Carolina
-North Dakota
-South Carolina
-South Dakota
+## North Carolina
+## North Dakota
+## South Carolina
+## South Dakota
 ```
 
 In the example above we're searching for lines of text that contain the words
@@ -806,11 +806,11 @@ egrep "North|South|East|West" states.txt
 ```
 
 ```
-North Carolina
-North Dakota
-South Carolina
-South Dakota
-West Virginia
+## North Carolina
+## North Dakota
+## South Carolina
+## South Dakota
+## West Virginia
 ```
 
 Just two more notes on `grep`: you can display the line number that a match
@@ -821,24 +821,24 @@ egrep -n "t$" states.txt
 ```
 
 ```
-7:Connecticut
-45:Vermont
+## 7:Connecticut
+## 45:Vermont
 ```
 
 And you can also `grep` multiple files at once but providing multiple file
 arguments:
 
 ```{r, engine='bash', eval=FALSE}
-egrep "s$" states.txt small.txt
+egrep "New" states.txt canada.txt
 ```
 
 ```
-states.txt:Arkansas
-states.txt:Illinois
-states.txt:Kansas
-states.txt:Massachusetts
-states.txt:Texas
-small.txt:rhythms
+## states.txt:New Hampshire
+## states.txt:New Jersey
+## states.txt:New Mexico
+## states.txt:New York
+## canada.txt:Newfoundland and Labrador
+## canada.txt:New Brunswick
 ```
 
 You now have the power to do some pretty complicated string searching using
@@ -850,14 +850,14 @@ egrep "^[AEIOU]{1}.+[aeiou]{1}$" states.txt
 ```
 
 ```
-Alabama
-Alaska
-Arizona
-Idaho
-Indiana
-Iowa
-Ohio
-Oklahoma
+## Alabama
+## Alaska
+## Arizona
+## Idaho
+## Indiana
+## Iowa
+## Ohio
+## Oklahoma
 ```
 
 I know there a many metacharacters to keep track of here so below I've included
@@ -907,7 +907,7 @@ pwd
 ```
 
 ```
-/Users/sean
+## /Users/sean
 ```
 
 Let's start by looking for a file called states.txt:
@@ -917,7 +917,7 @@ find . -name "states.txt"
 ```
 
 ```
-./Documents/states.txt
+## ./Documents/states.txt
 ```
 
 Right where we expected it to be! Now let's try searching for all `.jpg` files:
@@ -927,12 +927,12 @@ find . -name "*.jpg"
 ```
 
 ```
-./Photos/2016-06-21-lab01.jpg
-./Photos/2016-06-21-lab02.jpg
-./Photos/2017/2017-01-02-hiking01.jpg
-./Photos/2017/2017-01-02-hiking02.jpg
-./Photos/2017/2017-02-10-hiking01.jpg
-./Photos/2017/2017-02-10-hiking02.jpg
+## ./Photos/2016-06-21-lab01.jpg
+## ./Photos/2016-06-21-lab02.jpg
+## ./Photos/2017/2017-01-02-hiking01.jpg
+## ./Photos/2017/2017-01-02-hiking02.jpg
+## ./Photos/2017/2017-02-10-hiking01.jpg
+## ./Photos/2017/2017-02-10-hiking02.jpg
 ```
 
 Good file hunting out there!
@@ -970,27 +970,32 @@ head -n 4 states.txt > four.txt
 head -n 6 states.txt > six.txt
 ```
 
+If we want to look at which lines in these files are different we can use the
+`diff` command:
+
 ```{r, engine='bash', eval=FALSE}
 diff four.txt six.txt
 ```
 
 ```
-4a5,6
-> California
-> Colorado
+## 4a5,6
+## > California
+## > Colorado
 ```
+
+Only the differing lines are printed to the console. We could also browse
 
 ```{r, engine='bash', eval=FALSE}
 sdiff four.txt six.txt
 ```
 
 ```
-Alabama								Alabama
-Alaska								Alaska
-Arizona								Arizona
-Arkansas							Arkansas
-							      >	California
-							      >	Colorado
+## Alabama							Alabama
+## Alaska								Alaska
+## Arizona							Arizona
+## Arkansas							Arkansas
+## 							      >	California
+## 							      >	Colorado
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -999,7 +1004,7 @@ md5 states.txt
 ```
 
 ```
-MD5 (states.txt) = 8d7dd71ff51614e69339b03bd1cb86ac
+## MD5 (states.txt) = 8d7dd71ff51614e69339b03bd1cb86ac
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -1007,7 +1012,7 @@ md5 states_copy.txt
 ```
 
 ```
-MD5 (states_copy.txt) = 8d7dd71ff51614e69339b03bd1cb86ac
+## MD5 (states_copy.txt) = 8d7dd71ff51614e69339b03bd1cb86ac
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -1015,7 +1020,7 @@ shasum states.txt
 ```
 
 ```
-588e9de7ffa97268b2448927df41760abd3369a9  states.txt
+## 588e9de7ffa97268b2448927df41760abd3369a9  states.txt
 ```
 
 ```{r, engine='bash', eval=FALSE}
@@ -1023,7 +1028,7 @@ shasum states_copy.txt
 ```
 
 ```
-588e9de7ffa97268b2448927df41760abd3369a9  states_copy.txt
+## 588e9de7ffa97268b2448927df41760abd3369a9  states_copy.txt
 ```
 
 ## Connect
