--- a/05-Bash-Programming.Rmd
+++ b/05-Bash-Programming.Rmd
@@ -154,8 +154,8 @@ last line.
 - Anything written after a pound sign (`#`) is a comment and is not executed by
 Bash.
 - You can do simple arithmetic with the `expr` command.
-- Perform more complicated arithmetic by piping a string expression into `bc` using
-`echo`.
+- Perform more complicated arithmetic by piping a string expression into `bc`
+using `echo`.
 
 ### Exercises
 
@@ -228,8 +228,10 @@ echo $the_empire_state
 
 Occasionally you might want to run a command like you would on the command line
 and store the result of that command in a variable. We can do this by wrapping
-the command in a dollar sign and parentheses (`$( )`) around a command. For
-example if I wanted to store the number of lines in `math.sh`:
+the command in a dollar sign and parentheses (`$( )`) around a command.
+This syntax is called **command substitution**. The command is executed and then
+gets replaced by the string that resulted from running the command. For
+example if we wanted to store the number of lines in `math.sh`:
 
 ```{r, engine='bash', eval=FALSE}
 math_lines=$(cat math.sh | wc -l)
@@ -263,14 +265,66 @@ echo "First arg: $1. Second arg: $2."
 echo "Number of arguments: $#"
 ```
 
+Now let's try running the script a few times in a few different ways:
+
+```{r, engine='bash', eval=FALSE}
+bash vars.sh
+```
+
+```
+## Script arguments:
+## First arg: . Second arg: .
+## Number of arguments: 0
+```
+
+```{r, engine='bash', eval=FALSE}
+bash vars.sh red
+```
+
+```
+## Script arguments: red
+## First arg: red. Second arg: .
+## Number of arguments: 1
+```
+
+```{r, engine='bash', eval=FALSE}
+bash vars.sh red blue
+```
+
+```
+## Script arguments: red blue
+## First arg: red. Second arg: blue.
+## Number of arguments: 2
+```
+
+```{r, engine='bash', eval=FALSE}
+bash vars.sh red blue green
+```
+
+```
+## Script arguments: red blue green
+## First arg: red. Second arg: blue.
+## Number of arguments: 3
+```
+
+Your script can accept arguments just like a command line program! The first
+argument to your script is stored in `$1`, the second argument is stored in
+`$2`, etc, etc. An array of all of the arguments passed to your script is stored
+`$@`, and we'll discuss how to handle arrays later on in this chapter. The total
+number of arguments passed to your script is stored in `$#`. Now that you know
+how to pass arguments to your scripts you can start writing your own commnad
+line tools!
+
 ### Summary
 
 - Variables can be assigned with the equal sign (`=`) operator.
 - Strings or numbers can be assigned to variables.
 - The value of a variable can be accessed with the dollar sign (`$`) before the
 variable name.
-- You can use the dollar sign and parentheses syntax to execute a command and
-save the output in a variable.
+- You can use the dollar sign and parentheses syntax (command substitution) to
+execute a command and save the output in a variable.
+- You can access command line arguments within your own scripts using the dollar
+sign followed by the number of the argumnet.
 
 ### Exercises
 
@@ -280,10 +334,67 @@ and then the program prints the sum of those variables.
 variables, and then the program prints both of those strings. Write a version
 where the strings are printed on the same line, and a version where the strings
 are printed on different lines.
+3. Write a Bash program that prints the number of arguments provided to that
+program multiplied by the first argument providied to the program.
 
 ## User Input
 
-## If/Else
+If you're making Bash programs for you or for others to use one way you can get
+user input is to specify arguments for users to provide to your program, as we
+discussed in the previous section. You could also ask users to type in a string
+on the command line by temporarily stopping the execution of your program using
+the `read` command. Let's a write a small script where you can see how the read
+command works:
+
+```
+#!/usr/bin/env bash
+# File: letsread.sh
+
+echo "Type in a string and then press Enter:"
+read response
+echo "You entered: $response"
+```
+
+Now let's run this script:
+
+```{r, engine='bash', eval=FALSE}
+bash letsread.sh
+```
+
+```
+## Type in a string and then press Enter:
+## 
+```
+
+Let's type `Hello!` into the console, then press enter:
+
+```
+## Type in a string and then press Enter:
+## Hello!
+## You entered: Hello!
+```
+
+The `read` command prompts the user to type in a string, and the string that the
+user provides is stored in the variable that is given to the `read` command in
+the script.
+
+### Summary
+
+- `read` stores a string that the user provides in a variable.
+
+### Exercises
+
+1. Write a script that asks the user for an adjective, a noun, and a verb, and
+then use those words in a sentence (like [Mad Libs](https://en.wikipedia.org/wiki/Mad_Libs)).
+
+## Logic and If/Else
+
+When writing computer programs it is often useful for your program to be able to
+make decisions based on inputs like arguments, files, and environmental
+variables. Bash provides mechanisms for creating logical expressions, which
+resemble mathematical equations, and these logical expressions can be evaluated
+until they are either true or false. In fact, `true` and `false` are both simple
+Bash commands!
 
 ## Arrays
 
